# industrial-mllm-benchmark

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  poetry.lock.license  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
.github/workflows/: python-gh-release.yml  python-main.yml  python-pull-request.yml  python-pypi-release.yml  python-release.yml  python.yml
LICENSES/: LicenseRef-Datasheet.txt
docs/: .gitignore  error.md  index.md  introduction.md  new_grader.md  new_model.md  new_task.md  new_taskset.md  overview.md
examples/: .gitignore  benchmark.yml  graders.yml  models.yml
examples/images/: datasheet.jpg.license
industrial_mllm_benchmark/: __init__.py  __main__.py  benchmark.py  env_yaml.py  graders.py  implementations.py  models.py  parse_context.py  system_prompts.py  tasks.py  tasksets.py
industrial_mllm_benchmark/base/: __init__.py  base_graders.py  open_ai_models.py  system_prompts.py  user_prompts.py
templates/: report.html.j2
